[package]
name = "dotlottie-ffi"
version = "0.1.44"
edition = "2021"
build = "build.rs"

[profile.release]
lto = "fat"
opt-level = "z"
strip = "debuginfo"
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "dotlottie_player"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = ["thorvg", "ffi"]
thorvg = ["dotlottie-rs/thorvg"]
thorvg_webp = ["dotlottie-rs/thorvg_webp"]
thorvg_png = ["dotlottie-rs/thorvg_png"]
thorvg_jpg = ["dotlottie-rs/thorvg_jpg"]
thorvg_ttf = ["dotlottie-rs/thorvg_ttf"]
thorvg_lottie_expressions = ["dotlottie-rs/thorvg_lottie_expressions"]
ffi = []
uniffi = []

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
dotlottie-rs = { path = "../dotlottie-rs" }
cfg-if = "1.0"
bitflags = "2.6.0"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
lazy_static = "1.4"
cbindgen = "0.26.0"
