[package]
name = "dotlottie-ffi"
version = "0.1.47"
edition = "2021"
build = "build.rs"

[profile.release]
lto = "fat"
opt-level = "z"
strip = "debuginfo"
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "dotlottie_player"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = ["tvg-v0", "ffi"]
tvg-v0 = ["dotlottie-rs/tvg-v0"]
tvg-v1 = ["dotlottie-rs/tvg-v1"]
tvg-sw = ["dotlottie-rs/tvg-sw"]
tvg-wg = ["dotlottie-rs/tvg-wg"]
tvg-gl = ["dotlottie-rs/tvg-gl"]
tvg-webp = ["dotlottie-rs/tvg-webp"]
tvg-png = ["dotlottie-rs/tvg-png"]
tvg-jpg = ["dotlottie-rs/tvg-jpg"]
tvg-ttf = ["dotlottie-rs/tvg-ttf"]
tvg-threads = ["dotlottie-rs/tvg-threads"]
tvg-lottie-expressions = ["dotlottie-rs/tvg-lottie-expressions"]
tvg-simd = ["dotlottie-rs/tvg-simd"]
ffi = []
uniffi = []

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
dotlottie-rs = { path = "../dotlottie-rs" }
cfg-if = "1.0"
bitflags = "2.6.0"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
lazy_static = "1.4"
cbindgen = "0.26.0"