[package]
name = "dotlottie_fms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "dotlottie_fms"

[dependencies]
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
thiserror = "1.0.48"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
base64 = "0.21.4"
json = "0.12.4"
jzon = "0.12.5"


[build-dependencies]
lazy_static = "1.4.0"