[package]
name = "dotlottie-rs"
version = "0.1.0"
edition = "2021"
links = "thorvg"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
dev = ["tvg", "tvg-sw", "tvg-lottie-expressions", "tvg-threads", "tvg-png", "tvg-jpg", "tvg-webp", "tvg-ttf"]
tvg = []
tvg-log = []
tvg-sw = []
tvg-lottie-expressions = []
tvg-jpg = []
tvg-png = []
tvg-webp = []
tvg-ttf = []
tvg-threads = []
tvg-simd = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[build-dependencies]
bindgen = "0.72.0"
lazy_static = "1.4"
cc = "1.2"

[dev-dependencies]
criterion = "0.5.1"
# This is a workaround to enable this feature only on dev.
dotlottie-rs = { path = ".", features = ["dev"] }
png = "0.17"
image = "0.24"

[[bench]]
name = "benchmarks"
harness = false
