[package]
name = "dotlottie-rs"
version = "0.1.0"
edition = "2021"
links = "thorvg"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
dev = ["tvg", "tvg-sw", "tvg-lottie-expressions", "tvg-threads", "tvg-png", "tvg-jpg", "tvg-webp", "tvg-ttf", "c_api"]
c_api = ["dep:bitflags"]
tvg = []
tvg-log = []
tvg-sw = []
tvg-lottie-expressions = []
tvg-jpg = []
tvg-png = []
tvg-webp = []
tvg-ttf = []
tvg-threads = []
tvg-simd = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
bitflags = { version = "2.6", optional = true }

[build-dependencies]
bindgen = "0.72.0"
lazy_static = "1.4"
cc = "1.2"

[dev-dependencies]
criterion = "0.5.1"
# This is a workaround to enable this feature only on dev.
dotlottie-rs = { path = ".", features = ["dev"] }

[profile.release]
lto = "fat"           # Full link-time optimization across all crates
opt-level = 3         # "z" is what's affecting frame rate / performance. Keeping it at 3
strip = "debuginfo"   # Strip debug information
codegen-units = 1     # Better optimization at cost of compile time
panic = "abort"       # Remove panic unwinding infrastructure

[[bench]]
name = "benchmarks"
harness = false
