[package]
name = "dotlottie-rs"
version = "0.1.54"
edition = "2021"
links = "thorvg"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
dev = ["tvg", "tvg-sw", "tvg-lottie-expressions", "tvg-threads", "tvg-png", "tvg-jpg", "tvg-webp", "tvg-ttf", "c_api"]
c_api = ["dep:bitflags"]
tvg = []
tvg-log = []
tvg-sw = ["tvg"]
tvg-wg = ["tvg"]
tvg-gl = ["tvg"]
tvg-lottie-expressions = []
tvg-jpg = []
tvg-png = []
tvg-webp = []
tvg-ttf = []
tvg-threads = []
tvg-simd = []
dotlottie = ["dep:zip"] 
state-machines = ["dotlottie"]
theming = ["dotlottie"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"], optional = true }
bitflags = { version = "2.6", optional = true }

[build-dependencies]
bindgen = "0.72.0"
cbindgen = "0.29.2"
cc = "1.2"

[dev-dependencies]
criterion = "0.5.1"
# To test running without default deps: use "dotlottie-rs = { path = ".", default-features = false, features = [] }"
# Using feature flag "dev" will also include the default features.
# This is a workaround to enable this feature only on dev.
dotlottie-rs = { path = ".", default-features = false, features = [] }
minifb = "0.25"
winit = "0.30"
raw-window-handle = "0.6"
glutin = "0.32"
glutin-winit = "0.5"
gl = "0.14"

[target.'cfg(target_os = "macos")'.dev-dependencies]
core-foundation = "0.9"
objc2 = "0.5"
objc2-foundation = { version = "0.2" }
objc2-app-kit = { version = "0.2", features = ["NSWindow", "NSView", "NSOpenGL"] }
objc2-quartz-core = { version = "0.2", features = ["CAMetalLayer", "CALayer"] }

[profile.release]
lto = "fat"           # Full link-time optimization across all crates
opt-level = 3         # "z" is what's affecting frame rate / performance. Keeping it at 3
strip = "debuginfo"   # Strip debug information
codegen-units = 1     # Better optimization at cost of compile time
panic = "abort"       # Remove panic unwinding infrastructure

[[example]]
name = "opengl"
required-features = ["tvg-gl"]

[[example]]
name = "webgpu"
required-features = ["tvg-wg"]

[[example]]
name = "apply_theme"
required-features = ["theming"]

[[example]]
name = "state_machine"
required-features = ["state-machines"]

[[bench]]
name = "benchmarks"
harness = false
