[package]
name = "demo-player"
version = "0.1.0"
edition = "2021"

[dependencies]
minifb = "0.27"
dotlottie-rs = { path = "../../dotlottie-rs", features = ["dev"] }
sysinfo = "0.30"
rand = "0.8"
rapier2d = "0.22"

[[bin]]
name = "magic-wand"
path = "src/bin/magic-wand/main.rs"

[[bin]]
name = "physics"
path = "src/bin/physics/main.rs"