[package]
name = "demo-opengl"
version = "0.1.0"
edition = "2021"

[dependencies]
dotlottie-rs = { path = "../../dotlottie-rs", features = ["c_api", "tvg", "tvg-gl", "tvg-lottie-expressions", "tvg-threads", "tvg-png", "tvg-jpg", "tvg-webp", "tvg-ttf"] }
glutin = "0.32"
glutin-winit = "0.5"
winit = "0.30"
raw-window-handle = "0.6"
gl = "0.14"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSOpenGL"] }
