[package]
name = "demo-player"
version = "0.1.0"
edition = "2021"

[dependencies]
minifb = "0.27"
dotlottie-rs = { path = "../../dotlottie-rs", features = ["thorvg"] }
sysinfo = "0.30"
rand = "0.8"
ratatui = "0.20.1"
crossterm = "0.25"

[[bin]]
name = "new-format"
path = "src/bin/new-format/new-format.rs"


[[bin]]
name = "tui"
path = "src/bin/tui/tui.rs"
