[package]
name = "demo-player"
version = "0.1.0"
edition = "2021"

[dependencies]
minifb = "0.27"
dotlottie-rs = { path = "../../dotlottie-rs", features = ["dev"] }
sysinfo = "0.30"
rand = "0.8"
ratatui = "0.20.1"
crossterm = "0.25"
gilrs = "0.10.2"

[[bin]]
name = "new-format"
path = "src/bin/new-format/new-format.rs"

[[bin]]
name = "state_machine_showcase"
path = "src/bin/state_machine_showcase/state_machine_showcase.rs"

[[bin]]
name = "tui"
path = "src/bin/tui/tui.rs"

[[bin]]
name = "xbox_controller"
path = "src/bin/xbox_controller/main.rs"

# ARTIFACTS_INCLUDE_DIR=/Users/sam/Projects/LottieFiles/Github/@rust/dotlottie-rs/deps/artifacts/local-arch/usr/include  ARTIFACTS_LIB_DIR=/Users/sam/Projects/LottieFiles/Github/@rust/dotlottie-rs/deps/artifacts/local-arch/usr/lib ARTIFACTS_LIB64_DIR=/Users/sam/Projects/LottieFiles/Github/@rust/dotlottie-rs/deps/artifacts/local-arch/usr/lib cargo run --bin new-format --release
