[package]
name = "demo-webgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
dotlottie-rs = { path = "../../dotlottie-rs", features = ["c_api", "tvg", "tvg-wg", "tvg-lottie-expressions", "tvg-threads", "tvg-png", "tvg-jpg", "tvg-webp", "tvg-ttf"] }
winit = "0.30"
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
objc2 = "0.5"
objc2-foundation = { version = "0.2" }
objc2-app-kit = { version = "0.2", features = ["NSWindow", "NSView"] }
objc2-quartz-core = { version = "0.2", features = ["CAMetalLayer", "CALayer"] }
